packages/kit/test/apps/basics/src/routes/errors/page-endpoint/get-implicit/+page.server.js
import { FancyError } from '../_shared.js';

export const load = () => {
	throw new FancyError('oops');
};
